spider-gbxml-viewer/v-0-17-04/thm-theme/style.css
/* Copyright 2019 pushMe-pullYou authors. MIT License */
/* Forked from TooToo14 2019-06-03 0.14.5 */
/* Used by spider-gbxml-fixer, add-a-line */

@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');

* {
	box-sizing: border-box;
}

:root {
	font-size: 80%;
	font-family: 'Lato', sans-serif;
	--color: #4a9d36;
	--colorLight: hsla(79, 61%, 70%, 1); /* #9bcc31; */
	--colorBackground: #f7f8f9;
	--mnu-width: 22rem;
	--screen-width: calc(100vw);
	--headerHeight: 6rem;
}

html {
	height: 100%;
}

body {
	margin: 0;
}

a {
	font-weight: bold;
	text-decoration: none;
}

a:hover,
a:focus,
a:active {
	background-color: var( --colorLight );
	color: #aaa;
	text-decoration: underline
}

div a {
	color: var( --color );
}

.aTitle {
	color: white;
}

aside {
	border: 1px solid lightgray;
	margin-top: 15px;
	padding: 2px;
}

blockquote, pre {
	background-color: var(--colorLight );
	padding: 5px;
}


button,
input[type=button] {
	background-color: var(--colorLight );
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 1px 5px 0 rgba(0,0,0,.12);
	border: none;
	color: #322;
	cursor: pointer;
	padding: 3px 5px;
}

button:hover {
	background: #ccc;
	color: #fff
}

button:active {
	background: blue;
	color: #fff
}

code {
	background-color: var(--colorLight );
}

input[ type=range] {
	-webkit-appearance: none;
	-moz-appearance: none;
	background-color: var(--colorLight );
	width: 90%;
}

input[ type=range]::-moz-range-thumb {
	background-color: var(--colorLight );
	border-radius: 0;
	width: 10px;
}

input[ type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
	background-color: var(--color );
	height: 20px;
	width: 10px;
}


summary {
	background-color: var(--colorLight );
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
	color: #666;
	cursor: pointer;
	font-size: 1.1rem;
	font-weight: normal;
	outline: none;
	padding: 0 0 0 0.5rem;
}

summary:hover {

	color: #222;
}

.butHelp {
	font-size: 0.7rem;
	padding: 0 0.5rem;
	float: right;

}

.dingbat {
	cursor: pointer;
	font-size: 2rem;
	font-weight: bold;
	text-align: center;
}


.secContents {
	margin: 0 auto;
	max-width: 40rem;
}

.sumMenuTitle {
	background-color: var(--color );
	color: white;
	font-size: 1.2rem;
	padding: 0.1rem 0 0.1rem 0.5rem;
	text-align: center;
}
.sumMenuTitle:hover {
	background-color: var(--color );
	color: yellow;
}

#divContents {
	border: 0px solid red;
	height: 100%;
	left: var(--mnu-width);
	padding: 0;
	position: absolute;
	width: calc(100% - var(--mnu-width));
}

h1, h2, h3, h4, h5 {
	background-color: #4a9d36 ;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
	color: white;
	margin: 0;
	padding: 1rem;
	vertical-align: top;
}

#divTitle h2:hover {
	background-color: var(--colorLight );
}

#expandButton {
	height: 32px;
	position: absolute;
	left: var(--mnu-width);
	top: 1rem;
	transition: left 0.5s;
	width: 32px;
	z-index: 1;
}


#divContents.collapsed {
	left: 0;
	width: 100%;
}

#divTitle {
	margin: 0;
}

#expandButton.collapsed {
	left: 0;
}


#navMenu {
	background-color: var(--colorBackground );
	height: 100%;
	left: 0;
	margin: 0;
	overflow: auto;
	padding: 0;
	position: fixed;
	transition: left 0.5s;
	width: var(--mnu-width);
	z-index: 10;
}

#navMenu p {
	padding: 0 1rem;
}

#MNUdivHeader h3 {
	background-color: var(--colorLight );
}

#MNUdivHeader a {
	color: white;
}

#navMenu.collapsed {
	left: calc(var(--mnu-width) * -1);
}

/* lower right */
#aViewSource {
	position: fixed;
	bottom: 20px;
	right: 20px;
	padding: 8px;
	color: #fff;
	background-color: #555;
	opacity: 0.7;
}

#aViewSource:hover {
	cursor: pointer;
	opacity: 1;
}

/* Popup */

.attributeTitle {
	font-style: italic;
}
.attributeValue {
	color: blue;
}

.dragDropArea {
	border: 1px dashed gray;
	margin: 0.5rem;
	padding: 0 0.5rem;
}

#navDragMove {
	background-color: #f1f1f1;
	border: 1px solid #aaa;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 5px 15px 0 rgba(0,0,0,.12);
	max-height: 90vh;
	max-width: 30vw;
	overflow: auto;
	position: fixed;
	resize: both;
	right: 1rem;
	top: 1rem;

}

#secDragMove {
	border: 0px solid green;
	margin-bottom: 0.5rem;

}

#divDragMoveHeader {
	background-color: var( --color );
	color: #fff;
	cursor: move;
	opacity: 1;
	padding: 0.5rem;


}

#divDragMoveContent {
	height: 80%;
	overflow: auto;
	padding: 0 0 0 0.5rem;
}

#divDragMoveFooter {
	font-size: 0.8em;
	border: 0px solid red;
	padding: 0.5rem 0.5rem 0 0.5rem;
}


/* media */

@media all and (max-width: 640px) {

	#divContents {
		left: 0;
		padding: 0 1rem;
		width: 100%;
	}

	#expandButton {
		bottom: 1rem;
	}

}

@media all and (max-height: 640px) {

	#divContents {
		left: 0;
		padding: 0 1rem;
		width: 100%;
	}

	#expandButton {
		bottom: 1rem;
	}

}

